# c4lens

./: .gitignore  CONTRIBUTING.md  Cargo.toml  PROJECT_TRACKER.md  README.md  package-lock.json  package.json
app/: index.html  package.json  vite.config.ts
app/src/: App.tsx  (+3 more)
c4/: model.generated.yml  model.yml  schema.json
crates/c4lens-cli/: Cargo.toml
crates/c4lens-cli/src/: main.rs
crates/c4lens-cli/tests/: doctor.rs  generate.rs  init.rs  metadata.rs  scan.rs  validate.rs
crates/c4lens-cli/tests/support/: mod.rs
crates/c4lens-tauri/: Cargo.toml  tauri.conf.json
crates/c4lens-tauri/capabilities/: default.json
crates/c4lens-tauri/src/: app_state.rs  generation_candidate_store.rs  main.rs  model_watcher.rs
crates/c4lens-tauri/src/commands/: repo.rs
crates/c4lens-tauri/src/events/: mod.rs
docs/: cli-quickstart.md  mvp-first-run-walkthrough.md  mvp-manual-qa-template.md  mvp-qa-triage.md  mvp-release-checklist.md  mvp-release-notes.md  packaging.md  release-artifact-handling.md  roadmap.md  signing-notarization.md
scripts/: build_macos_mvp.sh  check.sh  check_mvp_candidate_packet.sh  check_mvp_docs.sh  check_release_metadata.sh  check_tauri_security.sh  create_mvp_demo_repo.sh  prepare_ci_candidate.sh  prepare_human_candidate_packet.sh  qa_ci_artifact_contract.sh  qa_current_ci_artifact.sh  qa_first_run_cli.sh  qa_installed_macos_artifact.sh  qa_release_candidate.sh  smoke_mvp.sh  smoke_release.sh  verify_macos_artifacts.sh  write_ci_artifact_log.sh  write_macos_release_manifest.sh  write_mvp_installed_gui_handoff.sh  write_mvp_manual_qa_stub.sh
(+52 files in other folders)
