[package]
name = "c4lens-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "c4lens"
path = "src/main.rs"

[dependencies]
c4lens-core = { path = "../c4lens-core" }
clap = { version = "4.5", features = ["derive"] }
serde_json = { workspace = true }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
