[package]
name = "c4lens-tauri"
version = "0.1.0"
edition = "2021"

[dependencies]
c4lens-core = { path = "../c4lens-core" }
rfd = "0.15"
serde = { workspace = true }
serde_json = { workspace = true }
tauri = { version = "2.0", features = [] }
tauri-plugin-dialog = "2.0"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }
