[package]
name = "c4lens-tauri"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22"
c4lens-core = { path = "../c4lens-core" }
rfd = "0.15"
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.10"
tauri = { version = "2.0", features = [] }
tauri-plugin-dialog = "2.0"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }
